--- a/wp-content/themes/portfolio/assets/scss/components/homepage/_hero.scss
+++ b/wp-content/themes/portfolio/assets/scss/components/homepage/_hero.scss
@@ -28,7 +28,7 @@
         text-wrap: pretty;
     }
     &-content {
-        @apply flex flex-col justify-start gap-8 sm:justify-evenly items-center;
+        @apply flex flex-col justify-start gap-8 sm:justify-evenly items-center max-sm:py-8;
         height: calc(100vh - var(--height-header));
     }
     &-button {
