--- a/wp-content/themes/portfolio/assets/scss/components/shared/_footer.scss
+++ b/wp-content/themes/portfolio/assets/scss/components/shared/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
     &-wrapper {
         .footer-top {
-            @apply mb-16 flex flex-col gap-12;
+            @apply mb-4 sm:mb-16 flex flex-col gap-4 sm:gap-12;
             // border: 1px solid #ccc;
         }
         .footer-bottom {
-            @apply flex justify-between capitalize;
+            @apply flex max-sm:flex-col max-sm:items-center justify-between capitalize;
         }
     }
 }
